plugin arch is working

--- a/etc/plugins/facter.cfg
+++ b/etc/plugins/facter.cfg
@@ -1,5 +1,6 @@
 [facter]
-plugin_name = "facter"
-plugin_desc = "Grabs facts for system using facter"
-plugin_command = "facter -y"
-plugin_format = "yaml"
+name = facter
+description = Uses facter to return facts
+command = facter -y
+result_format = yaml
+command_alias = get_facts
