--- a/etc/plugins/rpms.cfg
+++ b/etc/plugins/rpms.cfg
@@ -1,5 +1,6 @@
-[rpms]
-plugin_name = "rpms"
-plugin_desc = "Grabs packages installed on a system using rpm"
-plugin_command = "rpm -qa"
-plugin_format = "list"
+[rpm]
+name = rpm
+description = Grabs packages installed on a system using rpm
+command = rpm -qa
+result_format = list
+command_alias = get_rpms
