Swappable persistence. All scripts working.

--- a/etc/plugins/rpms.cfg
+++ b/etc/plugins/rpms.cfg
@@ -2,5 +2,5 @@
 name = rpm
 description = Grabs packages installed on a system using rpm
 command = rpm -qa
-result_format = list
+result_format = output
 command_alias = get_rpms
