Adding config file support. Inelegant

--- a/etc/vogeler/vogeler.conf
+++ b/etc/vogeler/vogeler.conf
@@ -1,6 +1,7 @@
 [global]
-plugin_path = /etc/vogeler/plugins
-log_handler = stream_handler
+plugin_path = etc/vogeler/plugins
+#log_handler = stream_handler ; currently unused
+log_level = WARN 
 # log_handler = syslog_handler
 # log_handler = file_handler
 
@@ -10,8 +11,8 @@ backend = couch
 
 [messaging]
 backend = amqp
-# backend = stomp
-# backend = pika
+# backend = stomp ; (probably never)
+# backend = pika ; (NYI)
 # backend = openwire ; I wish.....
 
 [server]
@@ -29,15 +30,15 @@ address = /dev/log
 # address = ('localhost', 514)
 
 [file_handler]
-filename = '/var/log/vogeler.log'
+filename = '/tmp/vogeler.log'
 
 [couch]
 dsn = couch://127.0.0.1:5984/system_records
 # dsn = couch://username:password@127.0.0.1:5984/system_records
-design_docs_path = /etc/vogeler/_design
+design_docs_path = etc/vogeler/_design
 
 [amqp]
-dsn = amqp://127.0.0.1:5672/vogeler
+dsn = amqp://guest:guest@127.0.0.1:5672/vogeler
 # backend = amqp://guest:guest@127.0.0.1:5672/vogeler
 master_exchange = 'vogeler.master.in'
 broadcast_exchange = 'vogeler.broadcast.in'
