global config with logging everywhere

--- a/etc/vogeler/vogeler.conf
+++ b/etc/vogeler/vogeler.conf
@@ -1,7 +1,7 @@
 [global]
 plugin_path = etc/vogeler/plugins
 #log_handler = stream_handler ; currently unused
-log_level = WARN 
+log_level = ERROR
 # log_handler = syslog_handler
 # log_handler = file_handler
 
