Fixing some exception handling. More _last_error usage

--- a/etc/vogeler/vogeler.conf
+++ b/etc/vogeler/vogeler.conf
@@ -1,7 +1,7 @@
 [global]
 plugin_path = etc/vogeler/plugins
-#log_handler = stream_handler ; currently unused
-log_level = ERROR
+log_level = WARN
+# log_handler = stream_handler ; currently unused
 # log_handler = syslog_handler
 # log_handler = file_handler
 
@@ -15,8 +15,20 @@ backend = amqp
 # backend = pika ; (NYI)
 # backend = openwire ; I wish.....
 
+[couch]
+dsn = couch://127.0.0.1:5984/system_records
+# dsn = couch://username:password@127.0.0.1:5984/system_records
+design_docs_path = etc/vogeler/_design
+
+[amqp]
+dsn = amqp://guest:guest@127.0.0.1:5672/vogeler
+# The following 2 settings are NYI
+master_exchange = 'vogeler.master.in'
+broadcast_exchange = 'vogeler.broadcast.in'
+
+# Stuff below here isn't implemented yet
 [server]
-log_level = DEBUG
+log_level = DEBUG 
 
 [client]
 log_level = DEBUG
@@ -31,14 +43,3 @@ address = /dev/log
 
 [file_handler]
 filename = '/tmp/vogeler.log'
-
-[couch]
-dsn = couch://127.0.0.1:5984/system_records
-# dsn = couch://username:password@127.0.0.1:5984/system_records
-design_docs_path = etc/vogeler/_design
-
-[amqp]
-dsn = amqp://guest:guest@127.0.0.1:5672/vogeler
-# backend = amqp://guest:guest@127.0.0.1:5672/vogeler
-master_exchange = 'vogeler.master.in'
-broadcast_exchange = 'vogeler.broadcast.in'
