fixing plugin path in configfile to match pip install location

--- a/etc/vogeler/vogeler.conf
+++ b/etc/vogeler/vogeler.conf
@@ -1,5 +1,5 @@
 [global]
-plugin_path = etc/vogeler/plugins
+plugin_path = /tmp/vogeler/plugins
 log_level = WARN
 # log_handler = stream_handler ; currently unused
 # log_handler = syslog_handler
